--- a/index.html
+++ b/index.html
@@ -1,28 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="WebLife digital legacy management services, Galway Ireland"
-    />
-    <meta
-      name="keywords"
-      content="Weblife, Digital Legacy management, end of life care, digital lives, digital life security "
-    />
-    <!-- Favicon insertion code provided by W3C schools  https://www.w3schools.com/html/html_favicon.asp-->
+    <meta name="description" content="WebLife digital legacy management services, Galway Ireland" />
+    <meta name="keywords"
+        content="Weblife, Digital Legacy management, end of life care, digital lives, digital life security " />
+    <!-- Favicon insertion (code provided by W3C schools  https://www.w3schools.com/html/html_favicon.asp)-->
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico" />
     <!-- fontawesome link -->
-    <script
-      src="https://kit.fontawesome.com/6ae877c4cb.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/6ae877c4cb.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>WebLife - Digital Legacy Management</title>
-  </head>
+</head>
 
-  <body>
+<body>
+    <header>
+        <!-- skip navigation bar for keyboard navigation users. (Code tuition provided by Kevin Powell https://www.youtube.com/watch?v=jDDaOFr9nqQ) -->
+        <a class="skip-nav" href="#main-content"
+            aria-label="Bypass the navigation bar for easier keyboard based screen navigation">Skip Navigation</a>
+        <!-- logo image -->
+        <img src="assets/images/logo.png" alt="Weblife company logo" class="logo" />
+        <!-- navbar content -->
+        <nav>
+            <ul class="nav_links">
+                <li>
+                    <a href="index.html" class="active" aria-label="Go to the Home page">Home</a>
+                </li>
+                <li>
+                    <a href="about.html" aria-label="Go to the About Us page">About</a>
+                </li>
+                <li>
+                    <a href="contact.html" aria-label="Go to the Contact Us page">Contact</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 </body>
+
 </html
