add hero section content index.html

--- a/index.html
+++ b/index.html
@@ -38,6 +38,29 @@
             </ul>
         </nav>
     </header>
+    <!-- Hero section content -->
+    <div id="main-content" class="hero">
+        <h1>
+          <strong
+            >"Under contract law, privacy ceases on the point of death"</strong
+          >: Elaine Kasket.
+        </h1>
+      </div>
+      <div class="intro">
+        <h2>Digital Legacy Management Specialists.</h2>
+        <p>
+          In today's online world, we are connected to the internet in many
+          different ways. Controlling our accounts, social media, photos,
+          documents, videos and email is almost a full time job. Imagine what
+          would happen to it if you were no longer around to manage it?
+        </p>
+        <p>
+          At 'WebLife' we provide Digital Legacy Management solutions that help
+          take care of your “Web life” from now and after you're gone. We ensure a
+          private, secure and discreet service to make sure your information is
+          looked after when you're no longer around to manage it yourself.
+        </p>
+      </div>
 </body>
 
 </html
