--- a/index.html
+++ b/index.html
@@ -41,26 +41,52 @@
     <!-- Hero section content -->
     <div id="main-content" class="hero">
         <h1>
-          <strong
-            >"Under contract law, privacy ceases on the point of death"</strong
-          >: Elaine Kasket.
+            <strong>"Under contract law, privacy ceases on the point of death"</strong>: Elaine Kasket.
         </h1>
-      </div>
-      <div class="intro">
+    </div>
+    <div class="intro">
         <h2>Digital Legacy Management Specialists.</h2>
         <p>
-          In today's online world, we are connected to the internet in many
-          different ways. Controlling our accounts, social media, photos,
-          documents, videos and email is almost a full time job. Imagine what
-          would happen to it if you were no longer around to manage it?
+            In today's online world, we are connected to the internet in many
+            different ways. Controlling our accounts, social media, photos,
+            documents, videos and email is almost a full time job. Imagine what
+            would happen to it if you were no longer around to manage it?
         </p>
         <p>
-          At 'WebLife' we provide Digital Legacy Management solutions that help
-          take care of your “Web life” from now and after you're gone. We ensure a
-          private, secure and discreet service to make sure your information is
-          looked after when you're no longer around to manage it yourself.
+            At 'WebLife' we provide Digital Legacy Management solutions that help
+            take care of your “Web life” from now and after you're gone. We ensure a
+            private, secure and discreet service to make sure your information is
+            looked after when you're no longer around to manage it yourself.
         </p>
-      </div>
+    </div>
+    <!-- services section content -->
+    <div class="services">
+        <div class="serve">
+            <h2>Digital Wills</h2>
+            <p>
+                WebLife will integrate your social media and complete digital life
+                into your last will and testament. WebLife's unique solution ensures
+                peace of mind when it comes to your wishes being carried out by your
+                executors.
+            </p>
+        </div>
+        <div class="serve">
+            <h2>Digital Estate Management</h2>
+            <p>
+                WebLife's Legacy Managers provide a full suite of estate planning
+                tools coupled with robust solutions for managing all of your personal
+                accounts securely.
+            </p>
+        </div>
+        <div class="serve">
+            <h2>Secure Storage Solutions</h2>
+            <p>
+                WebLife provides a fully secure, web-based, encrypted online
+                repository for all of your digital assests. A comprehensive, discreet
+                digital legacy management solution for the modern age.
+            </p>
+        </div>
+    </div>
 </body>
 
 </html
