add action button to index.html

--- a/index.html
+++ b/index.html
@@ -87,6 +87,17 @@
             </p>
         </div>
     </div>
+    <div class="cta">
+        <!-- Action button -->
+        <form action="about.html">
+          <input
+            class="info"
+            type="submit"
+            value="Find out More"
+            aria-label="Go to contact information page"
+          />
+        </form>
+      </div>
 </body>
 
 </html
