add footer section content with font awesome icons

--- a/index.html
+++ b/index.html
@@ -98,6 +98,56 @@
           />
         </form>
       </div>
+      <!-- Footer section content -->
+    <footer>
+        <ul class="social-networks">
+          <li>
+            <a
+              href="https://facebook.com"
+              target="_blank"
+              rel="noopener"
+              aria-label="Visit our Facebook page (opens in a new tab)"
+              ><i class="fa-brands fa-facebook"></i
+            ></a>
+          </li>
+          <li>
+            <a
+              href="https://twitter.com"
+              target="_blank"
+              rel="noopener"
+              aria-label="Visit our Twitter page (opens in a new tab)"
+              ><i class="fa-brands fa-twitter"></i
+            ></a>
+          </li>
+          <li>
+            <a
+              href="https://linkedin.com"
+              target="_blank"
+              rel="noopener"
+              aria-label="Visit our LinkedIn page (opens in a new tab)"
+              ><i class="fa-brands fa-linkedin"></i
+            ></a>
+          </li>
+          <li>
+            <a
+              href="https://instagram.com"
+              target="_blank"
+              rel="noopener"
+              aria-label="Visit our Instagram page (opens in a new tab)"
+              ><i class="fa-brands fa-instagram"></i
+            ></a>
+          </li>
+        </ul>
+        <p class="footpar">
+          <i class="fa-solid fa-house-chimney"> </i> 1 High Street, Dublin,
+          Ireland. | <i class="fa-solid fa-phone"> </i> +1 353 12 345 6789 |
+          <i class="fa-regular fa-envelope"> </i> info@weblife.ie
+        </p>
+        <br />
+        <p class="footpar">
+          Copyright <i class="fa-regular fa-copyright"></i> 2022 www.WebLife.ie
+        </p>
+      </footer>
 </body>
 
 </html
