copy over boilerplate, aavbar and footer content to contact.html. Update indentation and change active status contact.html

--- a/about.html
+++ b/about.html
@@ -41,95 +41,82 @@
     <!-- About us section styling and content -->
     <container id="main-content">
         <div class="backimg">
-          <section class="sec">
-            <div class="split">
-              <div class="imag">
-                <img
-                  class="pic"
-                  src="/assets/images/older_woman _at laptop_tiny.jpg"
-                  alt="Middle aged woman sitting at dining room table looking at laptop holding a bank card in her right hand."
-                />
-              </div>
-              <div>
-                <h1>About us.</h1>
-                <p>
-                  While it is not always an easy thing to consider, reviewing and
-                  compiling your digital life to plan ahead for when you’re no
-                  longer around to access it is crucial to guaranteeing your
-                  private information can be conscientiously taken care of. This
-                  is a subject that online platforms are increasingly aware of and
-                  many now allow you to issue instructions for what should happen
-                  in the event of your death. However, depending on the particular
-                  platform, both preserving and/or deleting your account are
-                  possible, but it does require forethought, and they all have
-                  very differing levels of complexity in their approaches.
-                </p>
-              </div>
+            <section class="sec">
+                <div class="split">
+                    <div class="imag">
+                        <img class="pic" src="/assets/images/older_woman _at laptop_tiny.jpg"
+                            alt="Middle aged woman sitting at dining room table looking at laptop holding a bank card in her right hand." />
+                    </div>
+                    <div>
+                        <h1>About us.</h1>
+                        <p>
+                            While it is not always an easy thing to consider, reviewing and
+                            compiling your digital life to plan ahead for when you’re no
+                            longer around to access it is crucial to guaranteeing your
+                            private information can be conscientiously taken care of. This
+                            is a subject that online platforms are increasingly aware of and
+                            many now allow you to issue instructions for what should happen
+                            in the event of your death. However, depending on the particular
+                            platform, both preserving and/or deleting your account are
+                            possible, but it does require forethought, and they all have
+                            very differing levels of complexity in their approaches.
+                        </p>
+                    </div>
+                </div>
+            </section>
+            <section class="sec">
+                <div class="split">
+                    <div class="imag">
+                        <img class="pic" src="/assets/images/socialicons_tiny.jpg"
+                            alt="a phone screen close up showing a selection of popular social media icons." />
+                    </div>
+                    <div>
+                        <p>
+                            Until recently, our treasured memories and important documents
+                            have been traditionally kept as physical objects. e.g. - photo
+                            albums, scrapbooks, letters, diaries, contracts, official
+                            documentation. All of these physical items would be available to
+                            loved ones once we were no longer here. Since the rise of the
+                            internet, especially cloud based storage, everything is now in a
+                            digital format. From audio and video files to our huge photo
+                            collections, emails, documents, contracts and our social media
+                            profiles – none of these are easily accessible by third parties following ones
+                            death without legacy planning in advance.
+                        </p>
+                    </div>
+                </div>
+            </section>
+            <section class="sec">
+                <div class="split">
+                    <div class="imag">
+                        <img class="pic" src="/assets/images/consultation-websize.jpg"
+                            alt="Young male consultant showing something on a tablet screen to a happy looking middle aged couple." />
+                    </div>
+                    <div>
+                        <p>
+                            WebLife approaches this requirement with your specific wishes in
+                            mind. It is managed by your unique legacy administrator. This is
+                            the only person you will deal with at WebLife ensuring a close
+                            working relationship and a single point of contact without
+                            having to discuss your private and sensitive information with
+                            multiple entities. Following our clients express wishes,
+                            WebLife's service is to erase and/or manage their online
+                            presence and sensitive information over social media, email,
+                            online retail, online gaming, banking, in preparation for when
+                            they are no longer able to. WebLife helps to make sure that our
+                            clients express wishes are respected in accordance with their
+                            specific, lawful and legally binding final requests.
+                        </p>
+                    </div>
+                </div>
+            </section>
+            <div class="button1">
+                <form action="contact.html">
+                    <input class="consult" type="submit" value="Book your Free Consultation Now!" />
+                </form>
             </div>
-          </section>
-          <section class="sec">
-            <div class="split">
-              <div class="imag">
-                <img
-                  class="pic"
-                  src="/assets/images/socialicons_tiny.jpg"
-                  alt="a phone screen close up showing a selection of popular social media icons."
-                />
-              </div>
-              <div>
-                <p>
-                  Until recently, our treasured memories and important documents
-                  have been traditionally kept as physical objects. e.g. - photo
-                  albums, scrapbooks, letters, diaries, contracts, official
-                  documentation. All of these physical items would be available to
-                  loved ones once we were no longer here. Since the rise of the
-                  internet, especially cloud based storage, everything is now in a
-                  digital format. From audio and video files to our huge photo
-                  collections, emails, documents, contracts and our social media
-                  profiles – none of these are easily accessible by third parties following ones
-                  death without legacy planning in advance.
-                </p>
-              </div>
-            </div>
-          </section>
-          <section class="sec">
-            <div class="split">
-              <div class="imag">
-                <img
-                  class="pic"
-                  src="/assets/images/consultation-websize.jpg"
-                  alt="Young male consultant showing something on a tablet screen to a happy looking middle aged couple."
-                />
-              </div>
-              <div>
-                <p>
-                  WebLife approaches this requirement with your specific wishes in
-                  mind. It is managed by your unique legacy administrator. This is
-                  the only person you will deal with at WebLife ensuring a close
-                  working relationship and a single point of contact without
-                  having to discuss your private and sensitive information with
-                  multiple entities. Following our clients express wishes,
-                  WebLife's service is to erase and/or manage their online
-                  presence and sensitive information over social media, email,
-                  online retail, online gaming, banking, in preparation for when
-                  they are no longer able to. WebLife helps to make sure that our
-                  clients express wishes are respected in accordance with their
-                  specific, lawful and legally binding final requests.
-                </p>
-              </div>
-            </div>
-          </section>
-          <div class="button1">
-            <form action="contact.html">
-              <input
-                class="consult"
-                type="submit"
-                value="Book your Free Consultation Now!"
-              />
-            </form>
-          </div>
         </div>
-      </container>
+    </container>
     <footer>
         <ul class="social-networks">
             <li>
