add form content and update formatting and indentation on all pages.

--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
             </ul>
         </nav>
     </header>
-    <!-- About us section styling and content -->
+    <!-- About us section content -->
     <container id="main-content">
         <div class="backimg">
             <section class="sec">
