--- a/contact.html
+++ b/contact.html
@@ -10,9 +10,11 @@
         content="Weblife, Digital Legacy management, end of life care, digital lives, digital life security " />
 
     <!-- Favicon insertion code provided by W3C schools https://www.w3schools.com/html/html_favicon.asp -->
+
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico" />
 
     <!-- fontawesome link -->
+
     <script src="https://kit.fontawesome.com/6ae877c4cb.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>WebLife - Digital Legacy Management</title>
@@ -47,6 +49,30 @@
         </nav>
     </header>
 
+    <!-- Contact Form content -->
+
+    <section class="contact-form">
+        <div class="form-content">
+            <h1 id="formhead">Schedule a free consultation <i class="fa-solid fa-handshake"></i></h1>
+            <div class="form-info">
+                <div class="form-style">
+                    <form method="get" action="thankyou.html">
+                        <input type="text" placeholder="First Name" required>
+                        <input type="text" placeholder="Last Name" required><br>
+                        <input type="Email" placeholder="Email Address" required><br>
+                        <input type="tel" placeholder="Phone Number" required><br>
+                        <textarea name="message" placeholder="Message" rows="5" required></textarea><br>
+                        <div id="butt1">
+                            <button class="send">Send Message</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer section content -->
+
     <footer>
         <ul class="social-networks">
             <li>
@@ -77,10 +103,6 @@
             Copyright <i class="fa-regular fa-copyright"></i> 2022 www.WebLife.ie
         </p>
     </footer>
-</body>
-
-</html>
-
 </body>
 
 </html>
