--- a/about.html
+++ b/about.html
@@ -8,9 +8,13 @@
     <meta name="description" content="WebLife digital legacy management services, Galway Ireland" />
     <meta name="keywords"
         content="Weblife, Digital Legacy management, end of life care, digital lives, digital life security " />
+
     <!-- Favicon insertion code provided by W3C schools https://www.w3schools.com/html/html_favicon.asp -->
+
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico" />
+
     <!-- fontawesome link -->
+    
     <script src="https://kit.fontawesome.com/6ae877c4cb.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>WebLife - Digital Legacy Management</title>
@@ -18,12 +22,18 @@
 
 <body>
     <header>
+
         <!-- skip navigation bar for keyboard navigation users. Code tuition provided by Kevin Powell https://www.youtube.com/watch?v=jDDaOFr9nqQ -->
+
         <a class="skip-nav" href="#main-content"
             aria-label="Bypass the navigation bar for easier keyboard based screen navigation">Skip Navigation</a>
+
         <!-- logo image -->
+
         <img src="assets/images/logo.png" alt="Weblife company logo" class="logo" />
+
         <!-- navbar content -->
+
         <nav>
             <ul class="nav_links">
                 <li>
@@ -38,7 +48,9 @@
             </ul>
         </nav>
     </header>
+
     <!-- About us section content -->
+
     <container id="main-content">
         <div class="backimg">
             <section class="sec">
@@ -117,6 +129,9 @@
             </div>
         </div>
     </container>
+
+    <!-- Footer section content -->
+
     <footer>
         <ul class="social-networks">
             <li>
