--- a/thankyou.html
+++ b/thankyou.html
@@ -8,8 +8,11 @@
     <meta name="description" content="WebLife digital legacy management services, Galway Ireland" />
     <meta name="keywords"
         content="Weblife, Digital Legacy management, end of life care, digital lives, digital life security " />
+
     <!-- Favicon insertion code provided by W3C schools  https://www.w3schools.com/html/html_favicon.asp-->
+
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico" />
+
     <!-- fontawesome link -->
 
     <script src="https://kit.fontawesome.com/6ae877c4cb.js" crossorigin="anonymous"></script>
@@ -19,7 +22,9 @@
 
 <body>
     <header>
+        
         <!-- skip navigation bar for keyboard navigation users. Code tuition provided by Kevin Powell https://www.youtube.com/watch?v=jDDaOFr9nqQ -->
+
         <a class="skip-nav" href="#main-content"
             aria-label="Bypass the navigation bar for easier keyboard based navigation">Skip Navigation</a>
 
@@ -44,57 +49,38 @@
         </nav>
     </header>
 
-<!-- Footer section content -->
+    <!-- Footer section content -->
 
     <footer>
         <ul class="social-networks">
-          <li>
-            <a
-              href="https://facebook.com"
-              target="_blank"
-              rel="noopener"
-              aria-label="Visit our Facebook page (opens in a new tab)"
-              ><i class="fa-brands fa-facebook"></i
-            ></a>
-          </li>
-          <li>
-            <a
-              href="https://twitter.com"
-              target="_blank"
-              rel="noopener"
-              aria-label="Visit our Twitter page (opens in a new tab)"
-              ><i class="fa-brands fa-twitter"></i
-            ></a>
-          </li>
-          <li>
-            <a
-              href="https://linkedin.com"
-              target="_blank"
-              rel="noopener"
-              aria-label="Visit our LinkedIn page (opens in a new tab)"
-              ><i class="fa-brands fa-linkedin"></i
-            ></a>
-          </li>
-          <li>
-            <a
-              href="https://instagram.com"
-              target="_blank"
-              rel="noopener"
-              aria-label="Visit our Instagram page (opens in a new tab)"
-              ><i class="fa-brands fa-instagram"></i
-            ></a>
-          </li>
+            <li>
+                <a href="https://facebook.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://twitter.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a>
+            </li>
+            <li>
+                <a href="https://linkedin.com" target="_blank" rel="noopener"
+                    aria-label="Visit our LinkedIn page (opens in a new tab)"><i class="fa-brands fa-linkedin"></i></a>
+            </li>
+            <li>
+                <a href="https://instagram.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens in a new tab)"><i
+                        class="fa-brands fa-instagram"></i></a>
+            </li>
         </ul>
         <p class="footpar">
-          <i class="fa-solid fa-house-chimney"> </i> 1 High Street, Dublin,
-          Ireland. | <i class="fa-solid fa-phone"> </i> +1 353 12 345 6789 |
-          <i class="fa-regular fa-envelope"> </i> info@weblife.ie
+            <i class="fa-solid fa-house-chimney"> </i> 1 High Street, Dublin,
+            Ireland. | <i class="fa-solid fa-phone"> </i> +1 353 12 345 6789 |
+            <i class="fa-regular fa-envelope"> </i> info@weblife.ie
         </p>
         <br />
         <p class="footpar">
-          Copyright <i class="fa-regular fa-copyright"></i> 2022 www.WebLife.ie
+            Copyright <i class="fa-regular fa-copyright"></i> 2022 www.WebLife.ie
         </p>
-      </footer>
-    </body>
-  </html>
-  
+    </footer>
+</body>
+
+</html>
