--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             </p>
         </div>
     </div>
-    <div class="cta">
+    <div class="action">
 
         <!-- Action button -->
 
