Add thank you page content and style action button

--- a/thankyou.html
+++ b/thankyou.html
@@ -48,6 +48,29 @@
             </ul>
         </nav>
     </header>
+    <div>
+        <section id="main-content">
+          <body>
+            <div class="thanks">
+              <h1 class="thanks">Your message has been received!</h1>
+              <p id="thanksp">
+                Our team will be in touch within the next 24 hours to schedule
+                your free consultation. We look forward to helping you find the
+                best solution to your needs. Thank you for contacting WebLife
+                Digital Legacy Management Services.
+              </p>
+              <form action="index.html">
+                <input
+                  class="return"
+                  type="submit"
+                  value="Homepage"
+                  aria-label="button to direct the user back to the hompepage"
+                />
+              </form>
+            </div>
+          </body>
+        </section>
+      </div>
 
     <!-- Footer section content -->
 
