add about page and stylesheet comment plus add media queries

--- a/about.html
+++ b/about.html
@@ -122,6 +122,9 @@
                     </div>
                 </div>
             </section>
+
+            <!-- About page action button -->
+            
             <div class="button1">
                 <form action="contact.html">
                     <input class="consult" type="submit" value="Book your Free Consultation Now!" />
