Add comments to thank you page and about page plus style comment undo and formatting

--- a/thankyou.html
+++ b/thankyou.html
@@ -48,6 +48,9 @@
             </ul>
         </nav>
     </header>
+
+<!-- Thank you page content -->
+
     <div>
         <section id="main-content">
           <body>
@@ -59,6 +62,9 @@
                 best solution to your needs. Thank you for contacting WebLife
                 Digital Legacy Management Services.
               </p>
+
+<!-- Thank you page action button -->
+
               <form action="index.html">
                 <input
                   class="return"
