update image file names on about page for github pages image issue

--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
             <section class="sec">
                 <div class="split">
                     <div class="imag">
-                        <img class="pic" src="../assets/images/older_woman _at laptop_tiny.jpg"
+                        <img class="pic" src="./assets/images/older_woman _at laptop_tiny.jpg"
                             alt="Middle aged woman sitting at dining room table looking at laptop holding a bank card in her right hand." />
                     </div>
                     <div>
@@ -79,7 +79,7 @@
             <section class="sec">
                 <div class="split">
                     <div class="imag">
-                        <img class="pic" src="../assets/images/socialicons_tiny.jpg"
+                        <img class="pic" src="./assets/images/socialicons_tiny.jpg"
                             alt="a phone screen close up showing a selection of popular social media icons." />
                     </div>
                     <div>
@@ -101,7 +101,7 @@
             <section class="sec">
                 <div class="split">
                     <div class="imag">
-                        <img class="pic" src="../assets/images/consultation-websize.jpg"
+                        <img class="pic" src="./assets/images/consultation-websize.jpg"
                             alt="Young male consultant showing something on a tablet screen to a happy looking middle aged couple." />
                     </div>
                     <div>
