--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
 
         <!-- logo image -->
 
-        <img src="assets/images/logo.png" alt="Weblife company logo" class="logo" />
+        <img src="assets/images/rsz_logo.webp" alt="Weblife company logo" class="logo" />
 
         <!-- navbar content -->
 
