update text on about page and rsmall styl eupdate on contact page

--- a/about.html
+++ b/about.html
@@ -87,8 +87,8 @@
                             Until recently, our treasured memories and important documents
                             have been traditionally kept as physical objects. e.g. - photo
                             albums, scrapbooks, letters, diaries, contracts, official
-                            documentation. All of these physical items would be available to
-                            loved ones once we were no longer here. Since the rise of the
+                            documentation. Usually all of these physical items would be available to
+                            loved ones once we were no longer here. However, since the rise of the
                             internet, especially cloud based storage, everything is now in a
                             digital format. From audio and video files to our huge photo
                             collections, emails, documents, contracts and our social media
@@ -112,10 +112,10 @@
                             working relationship and a single point of contact without
                             having to discuss your private and sensitive information with
                             multiple entities. Following our clients express wishes,
-                            WebLife's service is to erase and/or manage their online
+                            WebLife's sole responsibility is to erase and/or manage their online
                             presence and sensitive information over social media, email,
                             online retail, online gaming, banking, in preparation for when
-                            they are no longer able to. WebLife helps to make sure that our
+                            they are no longer able to. WebLife also makes sure that our
                             clients express wishes are respected in accordance with their
                             specific, lawful and legally binding final requests.
                         </p>
