add image links for readme. Update about page text content. Add images to assets folder.

--- a/about.html
+++ b/about.html
@@ -14,9 +14,9 @@
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico" />
 
     <!-- fontawesome link -->
-    
+
     <script src="https://kit.fontawesome.com/6ae877c4cb.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="assets/css/style.css"/>
+    <link rel="stylesheet" href="assets/css/style.css" />
     <title>WebLife - Digital Legacy Management</title>
 </head>
 
@@ -117,14 +117,15 @@
                             online retail, online gaming, banking, in preparation for when
                             they are no longer able to. WebLife also makes sure that our
                             clients express wishes are respected in accordance with their
-                            specific, lawful and legally binding final requests.
+                            specific, lawful and legally binding final requests. Click on the button below to book a
+                            free, no strings consultation to find out what will work best for your digital legacy needs.
                         </p>
                     </div>
                 </div>
             </section>
 
             <!-- About page action button -->
-            
+
             <div class="button1">
                 <form action="contact.html">
                     <input class="consult" type="submit" value="Book your Free Consultation Now!" />
