add address bar color theme and update favicon for different browsers

--- a/thankyou.html
+++ b/thankyou.html
@@ -12,12 +12,22 @@
     <!-- Favicon insertion code provided by W3C schools  https://www.w3schools.com/html/html_favicon.asp-->
 
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon_package/apple-touch-icon.png"/>
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon_package/favicon-32x32.png"/>
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon_package/favicon-16x16.png">
+    <link rel="mask-icon" href="assets/favicon_package/safari-pinned-tab.svg" color="#5bbad5"/>
+    <meta name="msapplication-TileColor" content="#da532c"/>
+    <meta name="theme-color" content="#ffffff"/>
 
     <!-- fontawesome link -->
 
     <script src="https://kit.fontawesome.com/6ae877c4cb.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>WebLife - Digital Legacy Management</title>
+
+    <!-- Address bar color theme for Progressive web app styling -->
+
+    <meta name="theme-color" content="#1e5c71" />
 </head>
 
 <body>
