add additional text to readme.md file and update about page action button

--- a/about.html
+++ b/about.html
@@ -138,7 +138,7 @@
 
             <div class="button1">
                 <form action="contact.html">
-                    <input class="consult" type="submit" value="Book your Free Consultation Now!" />
+                    <input class="consult" type="submit" value="Schedule your Free Consultation Now!" />
                 </form>
             </div>
         </div>
