add additional text to the readme.md file

--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
                         <textarea name="message" id="message" placeholder="Message" rows="5" required></textarea><br>
                         <label for="message"></label>
                         <div id="butt1">
-                            <button class="send">Send Message</button>
+                            <button class="send">Confirm consultation</button>
                         </div>
                     </form>
                 </div>
