add additional text sections to the readme.md file and update the About us page text.

--- a/about.html
+++ b/about.html
@@ -128,7 +128,7 @@
                             they are no longer able to. WebLife also makes sure that our
                             clients express wishes are respected in accordance with their
                             specific, lawful and legally binding final requests. Click on the button below to book a
-                            free, no strings consultation to find out what will work best for your digital legacy needs.
+                            free, no strings consultation to find out what will work best for your digital legacy needs. Follow us on your preferred social media platform by clicking on the links below.
                         </p>
                     </div>
                 </div>
