remove container element from about page

--- a/about.html
+++ b/about.html
@@ -61,8 +61,7 @@
 
     <!-- About us section content -->
 
-    <container id="main-content">
-        <div class="backimg">
+          <div class="backimg" id="main-content">
             <section class="sec">
                 <div class="split">
                     <div class="imag">
@@ -132,8 +131,7 @@
                         </p>
                     </div>
                 </div>
-            </section>
-
+            
             <!-- About page action button -->
 
             <div class="button1">
