tidy up div element tags on about page

--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
             <section class="sec">
                 <div class="split">
                     <div class="imag">
-                        <img class="pic" src="./assets/images/older_woman _at laptop_tiny.webp"
+                        <img class="pic" src="./assets/images/older_woman_at laptop_tiny.webp"
                             alt="Middle aged woman sitting at dining room table looking at laptop holding a bank card in her right hand." />
                     </div>
                     <div>
@@ -131,7 +131,7 @@
                         </p>
                     </div>
                 </div>
-            
+            </section>
             <!-- About page action button -->
 
             <div class="button1">
@@ -140,7 +140,7 @@
                 </form>
             </div>
         </div>
-    </container>
+    
 
     <!-- Footer section content -->
 
