fix image tag for about page

--- a/about.html
+++ b/about.html
@@ -62,10 +62,10 @@
     <!-- About us section content -->
 
           <div class="backimg" id="main-content">
-            <section class="sec">
+            <div class="sec">
                 <div class="split">
                     <div class="imag">
-                        <img class="pic" src="./assets/images/older_woman_at laptop_tiny.webp"
+                        <img class="pic" src="./assets/images/older_woman_at_laptop_tiny.webp"
                             alt="Middle aged woman sitting at dining room table looking at laptop holding a bank card in her right hand." />
                     </div>
                     <div>
@@ -84,8 +84,8 @@
                         </p>
                     </div>
                 </div>
-            </section>
-            <section class="sec">
+            </div>
+            <div class="sec">
                 <div class="split">
                     <div class="imag">
                         <img class="pic" src="./assets/images/socialicons_tiny.webp"
@@ -106,8 +106,8 @@
                         </p>
                     </div>
                 </div>
-            </section>
-            <section class="sec">
+            </div>
+            <div class="sec">
                 <div class="split">
                     <div class="imag">
                         <img class="pic" src="./assets/images/consultation-websize.webp"
@@ -131,7 +131,7 @@
                         </p>
                     </div>
                 </div>
-            </section>
+            </div>
             <!-- About page action button -->
 
             <div class="button1">
