amend alternativee text for image in about page to improve test result

--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
                 <div class="split">
                     <div class="imag">
                         <img class="pic" src="./assets/images/woman_at_laptop.webp"
-                            alt="Middle aged woman sitting at dining room table looking at laptop holding a bank card in her right hand." />
+                            alt="woman sitting at table looking at laptop." />
                     </div>
                     <div>
                         <h1>About us.</h1>
