final last checks and spelling/ formatting/ content cleaning

--- a/contact.html
+++ b/contact.html
@@ -12,12 +12,12 @@
     <!-- Favicon insertion code provided by W3C schools https://www.w3schools.com/html/html_favicon.asp -->
 
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon_package/apple-touch-icon.png"/>
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon_package/favicon-32x32.png"/>
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon_package/favicon-16x16.png"/>
-    <link rel="mask-icon" href="assets/favicon_package/safari-pinned-tab.svg" color="#5bbad5"/>
-    <meta name="msapplication-TileColor" content="#da532c"/>
-    <meta name="theme-color" content="#ffffff"/>
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon_package/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon_package/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon_package/favicon-16x16.png" />
+    <link rel="mask-icon" href="assets/favicon_package/safari-pinned-tab.svg" color="#5bbad5" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
 
     <!-- fontawesome link -->
 
@@ -67,11 +67,16 @@
             <div class="form-info">
                 <div class="form-style">
                     <form method="get" action="thankyou.html">
-                        <input type="text" title="First name" aria-label="Enter first name into form" id="fname" placeholder="First Name" required>
-                        <input type="text" title="Last name" aria-label="Enter last name into form"  id="lname" placeholder="Last Name" required><br>
-                        <input type="Email" title="Email" aria-label="Enter email address into form" id="email" placeholder="Email Address" required><br>
-                        <input type="tel" title="phone number" aria-label="Enter phone number into form" id="phone" placeholder="Phone Number" required><br>
-                        <textarea name="message" title="Message" aria-label="Enter message into form" id="message" placeholder="Message" rows="5" required></textarea><br>
+                        <input type="text" title="First name" aria-label="Enter first name into form" id="fname"
+                            placeholder="First Name" required>
+                        <input type="text" title="Last name" aria-label="Enter last name into form" id="lname"
+                            placeholder="Last Name" required><br>
+                        <input type="Email" title="Email" aria-label="Enter email address into form" id="email"
+                            placeholder="Email Address" required><br>
+                        <input type="tel" title="phone number" aria-label="Enter phone number into form" id="phone"
+                            placeholder="Phone Number" required><br>
+                        <textarea name="message" title="Message" aria-label="Enter message into form" id="message"
+                            placeholder="Message" rows="5" required></textarea><br>
                         <div id="butt1">
                             <button class="send">Confirm consultation</button>
                         </div>
