--- a/thankyou.html
+++ b/thankyou.html
@@ -9,15 +9,15 @@
     <meta name="keywords"
         content="Weblife, Digital Legacy management, end of life care, digital lives, digital life security " />
 
-    <!-- Favicon insertion code provided by W3C schools  https://www.w3schools.com/html/html_favicon.asp-->
+    <!-- Favicon insertion code provided by W3C schools https://www.w3schools.com/html/html_favicon.asp-->
 
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon_package/apple-touch-icon.png"/>
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon_package/favicon-32x32.png"/>
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon_package/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon_package/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon_package/favicon-16x16.png">
-    <link rel="mask-icon" href="assets/favicon_package/safari-pinned-tab.svg" color="#5bbad5"/>
-    <meta name="msapplication-TileColor" content="#da532c"/>
-    <meta name="theme-color" content="#ffffff"/>
+    <link rel="mask-icon" href="assets/favicon_package/safari-pinned-tab.svg" color="#5bbad5" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
 
     <!-- fontawesome link -->
 
@@ -32,7 +32,7 @@
 
 <body>
     <header>
-        
+
         <!-- skip navigation bar for keyboard navigation users. Code tuition provided by Kevin Powell https://www.youtube.com/watch?v=jDDaOFr9nqQ -->
 
         <a class="skip-nav" href="#main-content"
@@ -59,33 +59,29 @@
         </nav>
     </header>
 
-<!-- Thank you page content -->
+    <!-- Thank you page content -->
 
     <div>
         <section id="main-content">
             <div class="thanks">
-              <h1 class="thanks">Your message has been received!</h1>
-              <p id="thanksp">
-                Our team will be in touch within the next 24 hours to schedule
-                your free consultation. We look forward to helping you find the
-                best solution to your needs. Thank you for contacting WebLife
-                Digital Legacy Management Services.
-              </p>
+                <h1 class="thanks">Your message has been received!</h1>
+                <p id="thanksp">
+                    Our team will be in touch within the next 24 hours to schedule
+                    your free consultation. We look forward to helping you find the
+                    best solution to your needs. Thank you for contacting WebLife
+                    Digital Legacy Management Services.
+                </p>
 
-<!-- Thank you page action button -->
+                <!-- Thank you page action button -->
 
-              <form action="index.html">
-                <input
-                  class="return"
-                  type="submit"
-                  value="Homepage"
-                  aria-label="button to direct the user back to the hompepage"
-                />
-              </form>
+                <form action="index.html">
+                    <input class="return" type="submit" value="Homepage"
+                        aria-label="button to direct the user back to the hompepage" />
+                </form>
             </div>
         </section>
     </div>
-     
+
     <!-- Footer section content -->
 
     <footer>
