--- a/about.html
+++ b/about.html
@@ -8,16 +8,15 @@
     <meta name="description" content="WebLife digital legacy management services, Galway Ireland" />
     <meta name="keywords"
         content="Weblife, Digital Legacy management, end of life care, digital lives, digital life security " />
-
     <!-- Favicon insertion code provided by W3C schools https://www.w3schools.com/html/html_favicon.asp -->
 
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon_package/apple-touch-icon.png"/>
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon_package/favicon-32x32.png"/>
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon_package/favicon-16x16.png"/>
-    <link rel="mask-icon" href="assets/favicon_package/safari-pinned-tab.svg" color="#5bbad5"/>
-    <meta name="msapplication-TileColor" content="#da532c"/>
-    <meta name="theme-color" content="#ffffff"/>
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon_package/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon_package/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon_package/favicon-16x16.png" />
+    <link rel="mask-icon" href="assets/favicon_package/safari-pinned-tab.svg" color="#5bbad5" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
 
     <!-- fontawesome link -->
 
@@ -59,88 +58,89 @@
         </nav>
     </header>
 
-    <!-- About us section content -->
+    <!-- About us section content. Deliberate choice to only have one heading for the page content so as not to interrupt the paragraph content flow across the page. -->
 
-          <div class="backimg" id="main-content">
-            <div class="sec">
-                <div class="split">
-                    <div class="imag">
-                        <img class="pic" src="./assets/images/woman_at_laptop.webp"
-                            alt="woman sitting at table looking at laptop." />
-                    </div>
-                    <div>
-                        <h1>About us.</h1>
-                        <p>
-                            While it is not always an easy thing to consider, reviewing and
-                            compiling your digital life to plan ahead for when you’re no
-                            longer around to access it is crucial to guaranteeing your
-                            private information can be conscientiously taken care of. This
-                            is a subject that online platforms are increasingly aware of and
-                            many now allow you to issue instructions for what should happen
-                            in the event of your death. However, depending on the particular
-                            platform, both preserving and/or deleting your account are
-                            possible, but it does require forethought, and they all have
-                            very differing levels of complexity in their approaches.
-                        </p>
-                    </div>
+    <div class="backimg" id="main-content">
+        <div class="sec">
+            <div class="split">
+                <div class="imag">
+                    <img class="pic" src="./assets/images/woman_at_laptop.webp"
+                        alt="woman sitting at table looking at laptop." />
                 </div>
-            </div>
-            <div class="sec">
-                <div class="split">
-                    <div class="imag">
-                        <img class="pic" src="./assets/images/socialicons_tiny.webp"
-                            alt="a phone screen close up showing a selection of popular social media icons." />
-                    </div>
-                    <div>
-                        <p>
-                            Until recently, our treasured memories and important documents
-                            have been traditionally kept as physical objects. e.g. - photo
-                            albums, scrapbooks, letters, diaries, contracts, official
-                            documentation. Usually all of these physical items would be available to
-                            loved ones once we were no longer here. However, since the rise of the
-                            internet, especially cloud based storage, everything is now in a
-                            digital format. From audio and video files to our huge photo
-                            collections, emails, documents, contracts and our social media
-                            profiles – none of these are easily accessible by third parties following ones
-                            death without legacy planning in advance.
-                        </p>
-                    </div>
+                <div>
+                    <h1>About us.</h1>
+                    <p>
+                        While it is not always an easy thing to consider, reviewing and
+                        compiling your digital life to plan ahead for when you’re no
+                        longer around to access it is crucial to guaranteeing your
+                        private information can be conscientiously taken care of. This
+                        is a subject that online platforms are increasingly aware of and
+                        many now allow you to issue instructions for what should happen
+                        in the event of your death. However, depending on the particular
+                        platform, both preserving and/or deleting your account are
+                        possible, but it does require forethought, and they all have
+                        very differing levels of complexity in their approaches.
+                    </p>
                 </div>
-            </div>
-            <div class="sec">
-                <div class="split">
-                    <div class="imag">
-                        <img class="pic" src="./assets/images/consultation-websize.webp"
-                            alt="Young male consultant showing something on a tablet screen to a happy looking middle aged couple." />
-                    </div>
-                    <div>
-                        <p>
-                            WebLife approaches this requirement with your specific wishes in
-                            mind. It is managed by your unique legacy administrator. This is
-                            the only person you will deal with at WebLife ensuring a close
-                            working relationship and a single point of contact without
-                            having to discuss your private and sensitive information with
-                            multiple entities. Following our clients express wishes,
-                            WebLife's sole responsibility is to erase and/or manage their online
-                            presence and sensitive information over social media, email,
-                            online retail, online gaming, banking, in preparation for when
-                            they are no longer able to. WebLife also makes sure that our
-                            clients express wishes are respected in accordance with their
-                            specific, lawful and legally binding final requests. Click on the button below to book a
-                            free, no strings consultation to find out what will work best for your digital legacy needs. Follow us on your preferred social media platform by clicking on the links below.
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <!-- About page action button -->
-
-            <div class="button1">
-                <form action="contact.html">
-                    <input class="consult" type="submit" value="Schedule your Free Consultation Now!" />
-                </form>
             </div>
         </div>
-    
+        <div class="sec">
+            <div class="split">
+                <div class="imag">
+                    <img class="pic" src="./assets/images/socialicons_tiny.webp"
+                        alt="a phone screen close up showing a selection of popular social media icons." />
+                </div>
+                <div>
+                    <p>
+                        Until recently, our treasured memories and important documents
+                        have been traditionally kept as physical objects. e.g. - photo
+                        albums, scrapbooks, letters, diaries, contracts, official
+                        documentation. Usually all of these physical items would be available to
+                        loved ones once we were no longer here. However, since the rise of the
+                        internet, especially cloud based storage, everything is now in a
+                        digital format. From audio and video files to our huge photo
+                        collections, emails, documents, contracts and our social media
+                        profiles – none of these are easily accessible by third parties following ones
+                        death without legacy planning in advance.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="sec">
+            <div class="split">
+                <div class="imag">
+                    <img class="pic" src="./assets/images/consultation-websize.webp"
+                        alt="Young male consultant showing something on a tablet screen to a happy looking middle aged couple." />
+                </div>
+                <div>
+                    <p>
+                        WebLife approaches this requirement with your specific wishes in
+                        mind. It is managed by your unique legacy administrator. This is
+                        the only person you will deal with at WebLife ensuring a close
+                        working relationship and a single point of contact without
+                        having to discuss your private and sensitive information with
+                        multiple entities. Following our clients express wishes,
+                        WebLife's sole responsibility is to erase and/or manage their online
+                        presence and sensitive information over social media, email,
+                        online retail, online gaming, banking, in preparation for when
+                        they are no longer able to. WebLife also makes sure that our
+                        clients express wishes are respected in accordance with their
+                        specific, lawful and legally binding final requests. Click on the button below to book a
+                        free, no strings consultation to find out what will work best for your digital legacy needs.
+                        Follow us on your preferred social media platform by clicking on the links below.
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <!-- About page action button -->
+
+        <div class="button1">
+            <form action="contact.html">
+                <input class="consult" type="submit" value="Schedule your Free Consultation Now!" />
+            </form>
+        </div>
+    </div>
 
     <!-- Footer section content -->
 
