change contact action button text

--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
                         <textarea name="message" title="Message" aria-label="Enter message into form" id="message"
                             placeholder="Message" rows="5" required></textarea><br>
                         <div id="butt1">
-                            <button class="send">Confirm consultation</button>
+                            <button class="send">Send Request</button>
                         </div>
                     </form>
                 </div>
