Final styling changes to footer and paragraph alignemnt for index.html

--- a/about.html
+++ b/about.html
@@ -166,12 +166,12 @@
         </ul>
         <p class="footpar">
             <i class="fa-solid fa-house-chimney"> </i> 1 High Street, Dublin,
-            Ireland. | <i class="fa-solid fa-phone"> </i> +1 353 12 345 6789 |
+            Ireland.  <i class="fa-solid fa-phone"> </i> +1 353 12 345 6789 
             <i class="fa-regular fa-envelope"> </i> info@weblife.ie
         </p>
         <br />
         <p class="footpar">
-            Copyright <i class="fa-regular fa-copyright"></i> 2022 www.WebLife.ie
+            Copyright &nbsp; <i class="fa-regular fa-copyright"></i>&nbsp; 2022 www.WebLife.ie
         </p>
     </footer>
 </body>
