--- a/contact.html
+++ b/contact.html
@@ -109,9 +109,9 @@
             </li>
         </ul>
         <p class="footpar">
-            <i class="fa-solid fa-house-chimney"> </i> 1 High Street, Dublin,
-            Ireland.  <i class="fa-solid fa-phone"> </i> +1 353 12 345 6789 
-            <i class="fa-regular fa-envelope"> </i> info@weblife.ie
+            <i class="fa-solid fa-house-chimney"> </i>&nbsp; 1 High Street, Dublin,
+            Ireland. &nbsp; <i class="fa-solid fa-phone"> </i>&nbsp; +1 353 12 345 6789 
+            &nbsp;<i class="fa-regular fa-envelope"> </i>&nbsp; info@weblife.ie
         </p>
         <br />
         <p class="footpar">
